--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,7 @@
 project:
   type: website
   output-dir: docs
+
+website:
+  repo-url: https://github.com/dipernavz/dipernavz.github.io
+  repo-actions: [source]
